--- a/gabriel.html
+++ b/gabriel.html
@@ -8,6 +8,6 @@
 <body>
 <H1>Fórmula 1</H1>
 <p> Fórmula 1 é a mais popular modalidade de automobilismo do mundo. É a categoria mais avançada do esporte a motor e é regulamentada pela Federação Internacional de Automobilismo.</p>
-<p> A história da Fórmula 1 tem início com as competições de Grandes Prêmios disputadas na Europa, no início do século XX (20) </p>
+<p> A história da Fórmula 1 tem início com as competições de Grandes Prêmios disputadas na Europa, no início do século XX (20), apenas com uma pausa de 1939 até 9 de setembro de 1945, no Circuito de Silverstone, prosseguindo até a atualidade, sem interrupções e com 72 pistas usadas.</p>
 </body>
 </html>
