--- a/gabriel.html
+++ b/gabriel.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="gabriel.css">
 </head>
 <body>
 <H1>Fórmula 1</H1>
 <p> <strong> Fórmula 1 é a mais popular modalidade de automobilismo do mundo.</strong> É a categoria mais avançada do esporte a motor e é regulamentada pela Federação Internacional de Automobilismo. O "Campeonato Mundial de Pilotos", que se tornou o Campeonato Mundial de Fórmula 1 da FIA em 1981, tem sido uma das principais categorias de corrida em todo o mundo desde sua temporada inaugural em 1950. A palavra "fórmula" no nome se refere ao conjunto de regras às quais todos os carros dos participantes devem estar em conformidade. Uma temporada de Fórmula 1 consiste em uma série de corridas, conhecidas como Grandes Prêmios, que acontecem em todo o mundo em circuitos construídos para esse fim e em vias públicas fechadas.</p>
 <p> Ao contrário do que muitos acreditam, o registro oficial da categoria consta como Fórmula Um (Campeonato Mundial de Fórmula Um), com o numeral escrito por extenso, mas também se aceita o uso do 1 e do I (em romano).</p>
 <p>  Em Setembro de 2016, a categoria foi adquirida pelo grupo norte-americano Liberty Media Corporation em um acordo avaliado em US$ 8 bilhões, entre investimentos e assunção de dívidas, realizado em duas etapas: a compra da holding Delta Topco e a aquisição de ações da CVC Capital Partners.</p>
-<h2><em>História da Fórmula 1</em></h2>
+<H2><em>História da Fórmula 1</em></h2>
 <p> <em>A história da Fórmula 1 tem início com as competições de Grandes Prêmios disputadas na Europa, no início do século XX (20), apenas com uma pausa de 1939 até 9 de setembro de 1945, no Circuito de Silverstone, prosseguindo até a atualidade, sem interrupções e com 72 pistas usadas.</em></p>
 <H2>Anos 1950: O início</H2>
 <p> Seguindo os dirigentes do automobilismo, a FIA (Federação Internacional de Automobilismo) anunciou a prova inaugural do campeonato mundial de F-1, em um sábado, 13 de maio de 1950 no Circuito de Silverstone, no Reino Unido, para não coincidir com um culto religioso local.</p>
-<p> O campeonato anunciado compreendia 6 GP's a serem disputados na Europa: Reino Unido, Mônaco, Suíça, Bélgica, França e Itália, e seria ainda adicionado o resultado das 500 Milhas de Indianápolis, tornando, dessa maneira, um campeonato "mundial" (apesar do fato de que os carros, equipes e pilotos que competiam nos EUA serem completamente diferentes dos da Europa).</p>
-<p> Devido às dificuldades do pós-guerra, os carros eram todos do pré-guerra. Permitiu-se a participação de carros com motores superpressurizados até 1,5 litro ou com motores aspirados de 4,5 litros. A confirmação da presença da Alfa Romeo foi determinante para o momento. Sua participação com as Alfettas, dominantes na época, trouxe prestígio para o campeonato. Confirmaram presença a Ferrari (mas os carros não ficaram prontos para a prova inaugural), Maserati, algumas "Voiturettes" ERA e carros esportivos modificados, como os Talbots.</p>
+<H2>Anos 1950: O início</H2>
 <p> Seriam descartados os 3 piores resultados das 7 corridas disputadas. A pontuação era assim dividida: 8 pontos para o primeiro colocado; 6 para o segundo; 4 para o terceiro; 3 para o quarto; 2 para o quinto colocado e um ponto para o piloto que marcasse a volta mais rápida da prova.</p>
 <p> A prova inaugural em Silverstone contou com um público de 100 000 pessoas estimadas, além da presença do Rei George VI, a das princesas Elizabeth (futura rainha) e Margareth. Esta também foi a única prova em que a Família Real Britânica esteve presente.</p>
 <p> Após o domínio nos dois primeiros anos das Alfettas e das antigas voiturettes, a Ferrari apresenta um carro vencedor com motor de 4,5 litros e domina completamente os anos de 1952 e 1953, dando a Alberto Ascari o título de bicampeão. Neste momento, a Alfa, que competia ainda com as Alfettas (projeto do pré-guerra) não tinha recursos financeiros para investir no desenvolvimento de um novo projeto e decide abandonar a categoria.</p>
@@ -56,5 +56,6 @@
 <p> A mídia arrasou Lauda, chegando a dizer que ele havia se acovardado, mas ao conquistar o título de 1977, o bi-campeonato, tornou-se maior novamente. Somou 72 pontos contra 55 de Jody Scheckter e 47 de Mario Andretti. Lamentavelmente, para os torcedores brasileiros, no dia 18 de Março de 1977, Pace sofreu um acidente fatal com seu monomotor ao retornar da fazenda de um amigo que morreu também no acidente, em Mairiporã, na Grande São Paulo.</p>
 <p> Em 1978, Lauda mudou-se para a Brabham, mas viu a Fórmula 1 ser dominada pela Lotus. Mario Andretti conquistou o título com treze pontos de vantagem sobre seu companheiro de equipe, Ronnie Peterson. O "sueco voador" não terminou aquela temporada. Um acidente depois da largada do Grande Prêmio da Itália, em Monza, envolvendo vários carros o vitimou. Emerson Fittipaldi, que era seu grande amigo, havia abandonado o GP por conta da falta de segurança. Quando o brasileiro estava desembarcando, o avisaram da morte do sueco. O ano de 1978 marcou a entrada do brasileiro Nelson Piquet na Fórmula 1, correndo pela equipe Ensign.</p>
 <p> O título de 1979 foi disputado pelos pilotos da Ferrari, Jody Scheckter e Gilles Villeneuve que conquistaram 3 vitórias e 3 segundos lugares cada um, mas com vantagem para Scheckter, que somou 51 pontos contra 47 do canadense. O australiano Alan Jones somou 40 pontos, com quatro vitórias e 1 terceiro lugar e terminou o ano na terceira colocação. Ao final da temporada, Niki Lauda comunicou que estava se aposentando por não ter motivação para correr.</p>
+<p><strong> Ayrton Senna sempre s o melhor</strong></p>
 </body>
 </html>
