--- a/index.html
+++ b/index.html
@@ -68,5 +68,13 @@
 <p> Em 1984, Lauda faturou o tricampeonato por apenas meio ponto de diferença sobre Alain Prost — se Prost tivesse vencido o Grande Prêmio de Mônaco (com mais da metade da corrida disputada), interrompido pela chuva, o francês seria campeão. Foi nessa temporada que surgiu Ayrton Senna, um dos maiores pilotos da história da categoria. Aliás, neste Grande Prêmio de Mônaco, as condições da pista eram terríveis: um temporal caía. Sob estas condições, o novato Ayrton Senna guiou sua Toleman, chegando ao segundo lugar, até a bandeira vermelha. Muitos que presenciaram esta prova dizem que, se não houvesse a bandeira vermelha, Senna teria ganho a prova.</p>
 <p> Em 1985, Michele Alboreto da Ferrari, que desapareceu de meados da temporada, deixando o caminho claro para Prost ganhar o seu primeiro título de carreira aos 30 anos após os seus vários erros. Alboreto liderou o campeonato após vencer a corrida na Alemanha, mas depois não marcou um único ponto nas últimas cinco corridas, negando-lhe o seu único desafio no título da carreira.</p>
 <img src="220px-Lauda_McLaren_MP4-2_1984_Dallas_F1.jpg">
+    <ul>
+        <h3> PRINCIPAIS EQUIPES DE FORMULA 1</h3>
+        <il> Ferrari </il>
+        <il> McLaren </il>
+        <il> Mercedes </il>
+        <il> William </il>
+        <il> Lotus</il>
+    </ul>
 </body>
 </html>
